Première structure html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <!--link rel='stylesheet' type='text/css' media='screen' href='main.css'-->
 </head>
 <body>
-    <p>Ceci est mon site reservia</p>
-</body>
+    <header></header>
+    <section></section>
+    <section></section>
+    <aside></aside>
+    <section></section>
+    <footer></footer>
+</body>    
 </html>
