--- a/index.html
+++ b/index.html
@@ -1,18 +1,55 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Rerervia</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!--link rel='stylesheet' type='text/css' media='screen' href='main.css'-->
-</head>
-<body>
-    <header></header>
-    <section></section>
-    <section></section>
-    <aside></aside>
-    <section></section>
-    <footer></footer>
-</body>    
+  </head>
+
+  <body>
+    <header>
+      <a href="public/images/logo/Reservia@3x.png"
+        ><img src="public/images/logo/Reservia.svg" alt="logo du site"
+      /></a>
+      <nav>
+        <ul>
+          <li><a href="#">Hebergements</a></li>
+          <li><a href="#">Activités</a></li>
+          <li><a href="#">S'inscrire</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <section>
+      <div>
+        <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+        <p>En plein centre ville ou en pleine nature</p>
+      </div>
+      <div></div>
+    </section>
+
+    <section>
+      <header></header>
+      <div></div>
+      <a></a>
+    </section>
+
+    <aside>
+      <header></header>
+      <div></div>
+    </aside>
+
+    <section>
+      <h2></h2>
+      <div></div>
+    </section>
+
+    <footer>
+      <div></div>
+      <div></div>
+      <div></div>
+    </footer>
+  </body>
 </html>
