--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script src="https://kit.fontawesome.com/0c37ba36d5.js" crossorigin="anonymous"></script>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Rerervia</title>
@@ -10,14 +11,18 @@
 
   <body>
     <header>
-      <a href="public/images/logo/Reservia@3x.png"
-        ><img src="public/images/logo/Reservia.svg" alt="logo du site"
-      /></a>
+      <a href="public/images/logo/Reservia@3x.png"><img src="public/images/logo/Reservia.svg" alt="logo du site" /></a>
       <nav>
         <ul>
-          <li><a href="#">Hebergements</a></li>
-          <li><a href="#">Activités</a></li>
-          <li><a href="#">S'inscrire</a></li>
+          <li>
+            <a href="#">Hebergements</a>
+          </li>
+          <li>
+            <a href="#">Activités</a>
+          </li>
+          <li>
+            <a href="#">S'inscrire</a>
+          </li>
         </ul>
       </nav>
     </header>
@@ -27,7 +32,20 @@
         <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
         <p>En plein centre ville ou en pleine nature</p>
       </div>
-      <div></div>
+
+      <div>
+        <form action="traitement.php" method="POST">
+          <p>
+            <label for="ville"><i class="fas fa-map-marker-alt"></i></label>
+            <input type="text" name="ville" id="ville" value="Marseille, France" maxlength="40" size="20" required />
+            <input type="submit" value="Rechercher" />
+          </p>
+        </form>
+        <form>
+          <p></p>
+        </form>
+        <p></p>
+      </div>
     </section>
 
     <section>
