1ere section + debut deuxieme section

--- a/index.html
+++ b/index.html
@@ -41,16 +41,39 @@
             <input type="submit" value="Rechercher" />
           </p>
         </form>
-        <form>
-          <p></p>
-        </form>
-        <p></p>
+        <div>
+          <h3>Filtres</h3>
+          <a href="#">
+            <i class="fas fa-money-bill-wave"></i>
+            <div>Economiques</div>
+          </a>
+          <a href="#">
+            <i class="fas fa-child"></i>
+            <div>Familial</div>
+          </a>
+          <a href="#">
+            <i class="fas fa-heart"></i>
+            <div>Romantique</div>
+          </a>
+          <a href="#">
+            <i class="fas fa-dog"></i>
+            <div>Animaux autorisés</div>
+          </a>
+        </div>
+        <p><i class="fas fa-info"></i><p>Plus de 500 logements sont disponibles dans cette ville</p></p>
       </div>
     </section>
 
     <section>
-      <header></header>
-      <div></div>
+      <h2>Hébergements à Marseille</h2>
+      <div>
+        <a href="#"><img src="" alt=""><h3></h3><p></p><i></i></a>
+        <a href="#"><img src="" alt=""><h3></h3><p></p><i></i></a>
+        <a href="#"><img src="" alt=""><h3></h3><p></p><i></i></a>
+        <a href="#"><img src="" alt=""><h3></h3><p></p><i></i></a>
+        <a href="#"><img src="" alt=""><h3></h3><p></p><i></i></a>
+        <a href="#"><img src="" alt=""><h3></h3><p></p><i></i></a>
+      </div>
       <a></a>
     </section>
 
