--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Rerervia</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!--link rel='stylesheet' type='text/css' media='screen' href='main.css'-->
+    <link rel="stylesheet" href="public/style.css"/>
+
   </head>
 
   <body>
     <header>
-      <a href="public/images/logo/Reservia@3x.png"><img src="public/images/logo/Reservia.svg" alt="logo du site" /></a>
-      <nav>
+      <a id="logo_main" href="public/images/logo/Reservia@3x.png"><img src="public/images/logo/Reservia.svg" alt="logo du site" /></a>
+      <nav class="nav">
         <ul>
           <li>
             <a href="#">Hebergements</a>
