ajouts css header

--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
   <body>
     <header>
       <a id="logo_main" href="public/images/logo/Reservia@3x.png"><img src="public/images/logo/Reservia.svg" alt="logo du site" /></a>
-      <nav class="nav">
-        <ul>
-          <li>
+      <nav>
+        <ul class="nav_header">
+          <li class="li_1">
             <a href="#">Hebergements</a>
           </li>
-          <li>
+          <li class="li_2">
             <a href="#">Activités</a>
           </li>
-          <li>
+          <li class="li_3">
             <a href="#">S'inscrire</a>
           </li>
         </ul>
