--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="https://kit.fontawesome.com/0c37ba36d5.js" crossorigin="anonymous"></script>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Rerervia</title>
@@ -12,8 +11,7 @@
 
   <body>
     <header>
-      <a id="logo_main" href="public/images/logo/Reservia@3x.png"><img src="public/images/logo/Reservia.svg" alt="logo du site" /></a>
-      <nav>
+      <a id="logo_main" href="index.html"><img src="public/images/logo/Reservia.svg" alt="logo du site" /></a>
         <ul class="nav_header">
           <li class="li_1">
             <a href="#">Hebergements</a>
@@ -25,7 +23,7 @@
             <a href="#">S'inscrire</a>
           </li>
         </ul>
-      </nav>
+
     </header>
 
     <section>
@@ -35,7 +33,7 @@
       </div>
 
       <div>
-        <form action="traitement.php" method="POST">
+        <form action="#" method="POST">
           <p>
             <label for="ville"><i class="fas fa-map-marker-alt"></i></label>
             <input type="text" name="ville" id="ville" value="Marseille, France" maxlength="40" size="20" required />
@@ -94,4 +92,5 @@
       <div></div>
     </footer>
   </body>
+  <script src="https://kit.fontawesome.com/0c37ba36d5.js" crossorigin="anonymous"></script>
 </html>
