Fin structure html

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <a href="#">Hebergements</a>
           </li>
           <li class="li_2">
-            <a href="#">Activités</a>
-          </li>
+      <a href="#">Activités</a>
+      </li>
           <li class="li_3">
             <a href="#">S'inscrire</a>
           </li>
@@ -62,35 +62,72 @@
         <p><i class="fas fa-info"></i><p>Plus de 500 logements sont disponibles dans cette ville</p></p>
       </div>
     </section>
-
+    
     <section>
       <h2>Hébergements à Marseille</h2>
       <div>
-        <a href="#"><img src="" alt=""><h3></h3><p></p><i></i></a>
-        <a href="#"><img src="" alt=""><h3></h3><p></p><i></i></a>
-        <a href="#"><img src="" alt=""><h3></h3><p></p><i></i></a>
-        <a href="#"><img src="" alt=""><h3></h3><p></p><i></i></a>
-        <a href="#"><img src="" alt=""><h3></h3><p></p><i></i></a>
-        <a href="#"><img src="" alt=""><h3></h3><p></p><i></i></a>
+        <a href="#"><img src="public\images\hebergements\4_small\marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="chambre"><h3>Auberges de la canebière</h3><p>Nuit à partir de 25€</p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></a>
+        <a href="#"><img src="public\images\hebergements\4_small\fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="chambre"><h3>Hôtel du port</h3><p>Nuit à partir de 52€</p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></a>
+        <a href="#"><img src="public\images\hebergements\4_small\reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="chambre"><h3>Hôtel Les mouettes</h3><p>Nuit à partir de 76€</p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></a>
+        <a href="#"><img src="public\images\hebergements\4_small\annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="chambre"><h3>Hôtel de la mer</h3><p>Nuit à partir de 46€</p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></a>
+        <a href="#"><img src="public\images\hebergements\4_small\nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="chambre"><h3>Auberge Le Panier</h3><p>Nuit à partir de 23€</p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></a>
+        <a href="#"><img src="public\images\hebergements\4_small\febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="chambre"><h3>Hôtel chez Amina</h3><p>Nuit à partir de 96€</p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></a>
       </div>
-      <a></a>
+      <a href="#">Afficher plus</a>
     </section>
 
     <aside>
-      <header></header>
-      <div></div>
+      <header>
+        <h2>Les plus populaires</h2>
+        <i class="fas fa-chart-line"></i>
+      </header>
+      <div>
+        <a href="#"><img src="public\images\hebergements\4_small\emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="chambre"><h3>Hôtel Le soleil du matin</h3><p>Nuit à partir de 128€</p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></a>
+        <a href="#"><img src="public\images\hebergements\4_small\aw-creative-VGs8z60yT2c-unsplash.jpg" alt="chambre"><h3>Au coeur de l'eau <br/> Chambres d'hôtes</h3><p>Nuit à partir de 71€</p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></a>
+        <a href="#"><img src="public\images\hebergements\4_small\febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="chambre"><h3>Hôtel tout bleu et blanc</h3><p>Nuit à partir de 68€</p><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></a>
+      </div>
     </aside>
 
     <section>
-      <h2></h2>
+      <h2>Activités à Marseille</h2>
+      <div>
+        <div>
+          <a href="#"><img src="public\images\activites\3_medium\reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="paysage"><h3>Vieux Port</h3></a>
+          <a href="#"><img src="public\images\activites\3_medium\paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="paysage"><h3>Fort de Pomègues</h3></a>
+          <a href="#"><img src="public\images\activites\3_medium\kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="paysage"><h3>île du Frioul</h3></a>
+        </div>
+        <a href="#"><img src="public\images\activites\3_medium\kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="paysage"><h3>Parc Nationnal de Calanques</h3></a>
+        <a href="#"><img src="public\images\activites\3_medium\florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="paysage"><h3>Notre-Dame-de-la-Garde</h3></a>
+        <a href="#"><img src="public\images\activites\3_medium\lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="paysage"><h3>Parc Longchamp</h3></a>
+      </div>
       <div></div>
-    </section>
-
-    <footer>
-      <div></div>
-      <div></div>
-      <div></div>
-    </footer>
-  </body>
+    </div>
+  </section>
+  
+  <footer>
+    <div>
+      <h2>A propos</h2>
+      <ul>
+        <a href="#"><li>Fonctionnement du site</li></a>
+        <a href="#"><li>Conditions générakes de vente</li></a>
+        <a href="#"><li>Données de confidentalité</li></a>
+      </ul>
+    </div>
+    <div>
+      <h2>Nos hébergements</h2>
+      <ul>
+        <a href="#"><li>Charte qualité</li></a>
+        <a href="#"><li>Soumettre votre hôtel</li></a>
+      </ul>
+    </div>
+    <div>
+      <h2>Assistance</h2>
+      <ul>
+        <a href="#"><li>Centre d'aide</li></a>
+        <a href="#"><li>Nosu contacter</li></a>
+      </ul>
+    </div>
+  </footer>
+</body>
   <script src="https://kit.fontawesome.com/0c37ba36d5.js" crossorigin="anonymous"></script>
 </html>
