css barre de recherche

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <input type="submit" value="Rechercher" />
           </p>
         </form>
-        <div>
+        <div class="filtres">
           <h3>Filtres</h3>
           <a href="#">
             <i class="fas fa-money-bill-wave"></i>
