--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div>Animaux autorisés</div>
           </a>
         </div>
-        <p><i class="fas fa-info"></i> Plus de 500 logements sont disponibles dans cette ville</p>
+        <p class="nblogements"><i class="fas fa-info"></i> Plus de 500 logements sont disponibles dans cette ville</p>
       </div>
     </section>
 
