--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <li class="li_2">
           <a href="#">Activités</a>
         </li>
-        <li class="li_3">
+        <li class="sinscrire">
           <a href="#">S'inscrire</a>
         </li>
       </ul>
@@ -66,40 +66,47 @@
       <h2>Hébergements à Marseille</h2>
       <div class="logements">
         <a href="#"
-          ><img src="public\images\hebergements\4_small\marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="chambre" />
-          <h3>Auberges de la canebière</h3>
-          <p>Nuit à partir de 25€</p>
-          <p class="etoiles"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star gris"></i></p
+          ><div>
+            <img src="public\images\hebergements\4_small\marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="chambre" />
+            <h3>Auberges de la canebière</h3>
+            <p>Nuit à partir de 25€</p>
+            <p class="etoiles"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star gris"></i></p></div
         ></a>
         <a href="#">
-          <img src="public\images\hebergements\4_small\fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="chambre" />
-          <h3>Hôtel du port</h3>
-          <p>Nuit à partir de 52€</p>
-          <p class="etoiles"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
-        </a>
+          <div>
+            <img src="public\images\hebergements\4_small\fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="chambre" />
+            <h3>Hôtel du port</h3>
+            <p>Nuit à partir de 52€</p>
+            <p class="etoiles"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p></div
+        ></a>
         <a href="#"
-          ><img src="public\images\hebergements\4_small\reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="chambre" />
-          <h3>Hôtel Les mouettes</h3>
-          <p>Nuit à partir de 76€</p>
-          <p class="etoiles"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star gris"></i></p>
-        </a>
+          ><div>
+            <img src="public\images\hebergements\4_small\reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="chambre" />
+            <h3>Hôtel Les mouettes</h3>
+            <p>Nuit à partir de 76€</p>
+            <p class="etoiles"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star gris"></i></p></div
+        ></a>
         <a href="#"
-          ><img src="public\images\hebergements\4_small\annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="chambre" />
-          <h3>Hôtel de la mer</h3>
-          <p>Nuit à partir de 46€</p>
-          <p class="etoiles"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star gris"></i><i class="fas fa-star gris"></i></p>
-        </a>
+          ><div>
+            <img src="public\images\hebergements\4_small\annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="chambre" />
+            <h3>Hôtel de la mer</h3>
+            <p>Nuit à partir de 46€</p>
+            <p class="etoiles"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star gris"></i><i class="fas fa-star gris"></i></p></div
+        ></a>
         <a href="#"
-          ><img src="public\images\hebergements\4_small\nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="chambre" />
-          <h3>Auberge Le Panier</h3>
-          <p>Nuit à partir de 23€</p>
-          <p class="etoiles"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star gris"></i></p>
-        </a>
+          ><div>
+            <img src="public\images\hebergements\4_small\nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="chambre" />
+            <h3>Auberge Le Panier</h3>
+            <p>Nuit à partir de 23€</p>
+            <p class="etoiles"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star gris"></i></p></div
+        ></a>
         <a href="#"
-          ><img src="public\images\hebergements\4_small\febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="chambre" />
-          <h3>Hôtel chez Amina</h3>
-          <p>Nuit à partir de 96€</p>
-          <p class="etoiles"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
+          ><div>
+            <img src="public\images\hebergements\4_small\febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="chambre" />
+            <h3>Hôtel chez Amina</h3>
+            <p>Nuit à partir de 96€</p>
+            <p class="etoiles"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></p>
+          </div>
         </a>
       </div>
       <a href="#" class="afficherplus">Afficher plus</a>
