fin des corrections header sct1 sct2

--- a/index.html
+++ b/index.html
@@ -39,24 +39,32 @@
             <input type="submit" value="Rechercher" />
           </p>
         </form>
-        <div class="filtres">
+        <div class="filters">
           <h3>Filtres</h3>
-          <a href="#">
-            <i class="fas fa-money-bill-wave"></i>
-            <div>Economiques</div>
-          </a>
-          <a href="#">
-            <i class="fas fa-child"></i>
-            <div>Familial</div>
-          </a>
-          <a href="#">
-            <i class="fas fa-heart"></i>
-            <div>Romantique</div>
-          </a>
-          <a href="#">
-            <i class="fas fa-dog"></i>
-            <div>Animaux autorisés</div>
-          </a>
+          <div class="filter_container">
+            <div class="search_filter_icon">
+              <i class="fas fa-money-bill-wave"></i>
+            </div>
+            <p class="search_filter_name">Economiques</p>
+          </div>
+          <div class="filter_container">
+            <div class="search_filter_icon">
+              <i class="fas fa-child"></i>
+            </div>
+            <p class="search_filter_name">Familial</p>
+          </div>
+          <div class="filter_container">
+            <div class="search_filter_icon">
+              <i class="fas fa-heart"></i>
+            </div>
+            <p class="search_filter_name">Romantique</p>
+          </div>
+          <div class="filter_container">
+            <div class="search_filter_icon">
+              <i class="fas fa-dog"></i>
+            </div>
+            <p class="search_filter_name">Animaux autorisés</p>
+          </div>
         </div>
         <p class="nblogements"><i class="fas fa-info"></i> Plus de 500 logements sont disponibles dans cette ville</p>
       </div>
