--- a/index.html
+++ b/index.html
@@ -137,33 +137,45 @@
       <a href="#" class="afficherplus">Afficher plus</a>
     </section>
 
-    <aside>
-      <header>
+    <aside id="MostPopular">
+      <header class="title-mostpopular">
         <h2>Les plus populaires</h2>
         <i class="fas fa-chart-line"></i>
       </header>
-      <div>
-        <a href="#"
-          ><img src="public\images\hebergements\4_small\emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="chambre" />
-          <h3>Hôtel Le soleil du matin</h3>
-          <p>Nuit à partir de 128€</p>
-          <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i
-        ></a>
-        <a href="#"
-          ><img src="public\images\hebergements\4_small\aw-creative-VGs8z60yT2c-unsplash.jpg" alt="chambre" />
-          <h3>
-            Au coeur de l'eau <br />
-            Chambres d'hôtes
-          </h3>
-          <p>Nuit à partir de 71€</p>
-          <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i
-        ></a>
-        <a href="#"
-          ><img src="public\images\hebergements\4_small\febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="chambre" />
-          <h3>Hôtel tout bleu et blanc</h3>
-          <p>Nuit à partir de 68€</p>
-          <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i
-        ></a>
+      <div class="cards2">
+        <a href="#">
+          <div class="card2">
+            <img class="card2_img" src="public\images\hebergements\4_small\emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="chambre" />
+            <div class="card2_container">
+              <h3 class="card2_container_h3_1">Hôtel Le soleil du matin</h3>
+              <p>Nuit à partir de 128€</p>
+              <div class="card2_etoiles"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
+            </div>
+          </div>
+        </a>
+        <a href="#">
+          <div class="card2">
+            <img class="card2_img" src="public\images\hebergements\4_small\aw-creative-VGs8z60yT2c-unsplash.jpg" alt="chambre" />
+            <div class="card2_container">
+              <h3 class="card2_container_h3_2">
+                Au coeur de l'eau <br />
+                Chambres d'hôtes
+              </h3>
+              <p>Nuit à partir de 71€</p>
+              <div class="card2_etoiles_2"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></div>
+            </div>
+          </div>
+        </a>
+        <a href="#">
+          <div class="card2">
+            <img class="card2_img" src="public\images\hebergements\4_small\febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="chambre" />
+            <div class="card2_container">
+              <h3 class="card2_container_h3_3">Hôtel tout bleu et blanc</h3>
+              <p>Nuit à partir de 68€</p>
+              <div class="card2_etoiles"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></div>
+            </div>
+          </div>
+        </a>
       </div>
     </aside>
 
